--- a/public/views/about-modern.ejs
+++ b/public/views/about-modern.ejs
@@ -673,7 +673,7 @@
                             </svg>
                         </div>
                         <h4>Year of Development</h4>
-                        <p>2024-2025</p>
+                        <p>2025-2026</p>
                     </div>
                 </div>
             </section>
@@ -692,14 +692,18 @@
                     </div>
 
                     <div class="team-member">
-                        <div class="member-avatar">ZO</div>
+                        <div class="member-avatar" onclick="openImageModal('/images/ZED.jpg')" title="Click to view full image">
+                            <img src="/images/ZED.jpg" alt="Zedrick Orantia" />
+                        </div>
                         <h3>ZEDRICK ORANTIA</h3>
                         <p class="member-role">Front-end Developer</p>
                         <p class="member-description">Transforming design visions into elegant and responsive user experiences.</p>
                     </div>
 
                     <div class="team-member">
-                        <div class="member-avatar">KD</div>
+                        <div class="member-avatar" onclick="openImageModal('/images/KYLE.jpg')" title="Click to view full image">
+                            <img src="/images/KYLE.jpg" alt="Kyle Deroma" />
+                        </div>
                         <h3>KYLE DEROMA</h3>
                         <p class="member-role">Back-end Developer</p>
                         <p class="member-description">Engineering scalable systems that power Projexia's core functionality.</p>
