--- a/public/views/browse-modern.ejs
+++ b/public/views/browse-modern.ejs
@@ -69,11 +69,11 @@
             <!-- Collapsible Filters -->
             <div class="filters-grid" id="filtersContainer">
               <select class="input" id="sortFilter">
-                <option value="trending" <%= selectedSort === 'trending' ? 'selected' : '' %>>Sort: Trending</option>
-                <option value="newest" <%= selectedSort === 'newest' ? 'selected' : '' %>>Sort: Newest</option>
-                <option value="likes" <%= selectedSort === 'likes' ? 'selected' : '' %>>Sort: Most Liked</option>
-                <option value="views" <%= selectedSort === 'views' ? 'selected' : '' %>>Sort: Most Viewed</option>
-                <option value="random" <%= selectedSort === 'random' ? 'selected' : '' %>>Sort: Random</option>
+                <option value="trending" <%= selectedSort === 'trending' ? 'selected' : '' %>>Trending</option>
+                <option value="newest" <%= selectedSort === 'newest' ? 'selected' : '' %>>Newest</option>
+                <option value="likes" <%= selectedSort === 'likes' ? 'selected' : '' %>>Most Liked</option>
+                <option value="views" <%= selectedSort === 'views' ? 'selected' : '' %>>Most Viewed</option>
+                <option value="random" <%= selectedSort === 'random' ? 'selected' : '' %>>Random</option>
               </select>
 
               <select class="input" id="programFilter">
