--- a/public/views/profile-modern.ejs
+++ b/public/views/profile-modern.ejs
@@ -500,8 +500,7 @@
                                     'GV': 'Graphics Visualisation'
                                 };
                                 const trackFullName = trackNames[userProfile.track] || userProfile.track;
-                            %>
-                            <span class="meta-item">
+                            %><span class="meta-item">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
                                     <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
@@ -741,11 +740,6 @@
                             </div>
                         <% } %>
                     </div>
-                </div>
-                                <a href="/upload" class="btn btn-primary">Upload Your First Project</a>
-                            <% } %>
-                        </div>
-                    <% } %>
                 </div>
 
                 <!-- Liked Projects Section -->
